--- a/CLXTest/test-output/index.html
+++ b/CLXTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse--1795745022\testng-customsuite.xml</span>
+                    <span>C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-214153713\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse--1795745022\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dhiraj\AppData\Local\Temp\testng-eclipse-214153713\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyReferralEngineTest')
 data.setCell(0, 2, 'com.clx.qa.testcases.ReferralEngineTest')
-data.setCell(0, 3, 1408);
+data.setCell(0, 3, 328);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 328 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,11 +226,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyReferralEngineTest</span>
-                <span class="method-start">47400 ms</span>
+                <span class="method-start">39282 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">48813 ms</span>
+                <span class="method-start">39612 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
