--- a/CLXTest/test-output/old/Default suite/methods.html
+++ b/CLXTest/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62aa67">  <td>18/12/26 02:17:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@3e6fa38a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/12/26 02:18:53</td>   <td>55573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.validateAddNewContactTest()[pri:1, instance:com.clx.qa.testcases.ContactManagerTest@3e6fa38a]">validateAddNewContactTest</td> 
-  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/12/26 02:19:33</td>   <td>96026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@3e6fa38a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/12/26 02:19:34</td>   <td>96793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@3e6fa38a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/12/26 02:20:28</td>   <td>151280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.verifyContactManagerLogoTest()[pri:2, instance:com.clx.qa.testcases.ContactManagerTest@3e6fa38a]">verifyContactManagerLogoTest</td> 
-  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>18/12/26 02:20:32</td>   <td>155319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@3e6fa38a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>18/12/27 11:40:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>18/12/27 11:41:49</td>   <td>71276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.verifyContactManagerLogoTest()[pri:1, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">verifyContactManagerLogoTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>18/12/27 11:42:09</td>   <td>91342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>18/12/27 11:42:10</td>   <td>92029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>18/12/27 11:43:21</td>   <td>163841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.validateAddNewContactTest()[pri:2, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">validateAddNewContactTest</td> 
+  <td>main@112061925</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>18/12/27 11:43:51</td>   <td>193515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@112061925</td>   <td></td> </tr>
 </table>
