--- a/CLXTest/test-output/old/Default suite/classes.html
+++ b/CLXTest/test-output/old/Default suite/classes.html
@@ -4,22 +4,50 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.clx.qa.testcases.LoginPageTest</td>
+<td>com.clx.qa.testcases.ContactManagerTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginPageTitleTest</td>
+<td>deleteGlobalContactTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clxLogoTest</td>
+<td>deleteLocalContactTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginTest</td>
+<td>contactPrintTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SelectAllContactTypeFilterTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>contactExportTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateAddNewContactTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>selectSingleContactbyNameTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>randomContactTypeFilterTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>selectMultipleContactbyNameTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyContactManagerLogoTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
