--- a/CLXTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/CLXTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:24:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clxLogoTest()[pri:2, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">clxLogoTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:24:22</td>   <td>-24284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">loginPageTitleTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:25:12</td>   <td>25720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">loginTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:24:06</td>   <td>-40550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:24:33</td>   <td>-13512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:24:58</td>   <td>11066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:24:32</td>   <td>-14256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:24:57</td>   <td>10358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>19/01/04 03:25:23</td>   <td>36497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.clx.qa.testcases.LoginPageTest@6093dd95]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/06 11:08:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.contactExportTest()[pri:10, instance:com.clx.qa.testcases.ContactManagerTest@e25b2fe]">contactExportTest</td> 
+  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/06 11:06:48</td>   <td>-71571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactManagerTest.contactPrintTest()[pri:9, instance:com.clx.qa.testcases.ContactManagerTest@e25b2fe]">contactPrintTest</td> 
+  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/06 11:05:48</td>   <td>-131875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@e25b2fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/06 11:06:51</td>   <td>-68940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactManagerTest.setUp()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@e25b2fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/06 11:06:50</td>   <td>-69645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@e25b2fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/01/06 11:08:00</td>   <td>187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactManagerTest.tearDown()[pri:0, instance:com.clx.qa.testcases.ContactManagerTest@e25b2fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
 </table>
